objects/SC_RegionMapping__mdt.object
<CustomObject>
    <description>Custom metadata for storing agent region mapping</description>
    <fields>
        <fullName>RSC_AgentRegion__c</fullName>
        <description>This field stores the agent&apos;s region</description>
        <label>Agent Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_Region__c</fullName>
        <description>This field stores the region</description>
        <label>Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_Suburb__c</fullName>
        <description>This field stores the suburb</description>
        <label>Suburb</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Region Mapping</label>
    <listViews>
        <fullName>SC_All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>RSC_Region__c</columns>
        <columns>RSC_AgentRegion__c</columns>
        <columns>RSC_Suburb__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Region Mappings</pluralLabel>
</CustomObject>